# ta

./: .htmlvalidate.json  .stylelintrc.json  CLAUDE.md  Cargo.toml  Dockerfile  action.yml  eslint.config.js  go.mod  main.go  package.json  ta.toml  tsconfig.json
github/: github.go
linter/: linter.go
review/: parser.go  parser_test.go  review.go  review_test.go
src/: github.ts  linters.test.ts  linters.ts  main.rs  main.ts  report.rs
src/parsers/: .eslint.rs.pending-snap  eslint.rs  mod.rs  stylelint.rs
src/reporters/: .github.rs.pending-snap  github.rs  mod.rs  stdout.rs
src/services/: github.ts  stdout.ts
tests/: test.css  test.html  test.js  test2.js
