[package]
name = "ta"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ta"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
html-escape = "0.2"
clap = { version = "4", features = ["derive", "wrap_help"] }
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[lints.clippy]
pedantic = "warn"
